--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.21.2",
-    "astro": "^4.3.5",
+    "@astrojs/react": "^4.1.2",
+    "@astrojs/starlight": "^0.30.3",
+    "@astrojs/tailwind": "^5.1.4",
+    "astro": "^5.1.2",
     "sharp": "^0.32.5"
   }
 }
