--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/starlight": "^0.30.3",
     "@astrojs/tailwind": "^5.1.4",
     "astro": "^5.1.2",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "starlight-image-zoom": "^0.10.1"
   }
 }
