--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.13.3",
     "sharp": "^0.34.3",
+    "devalue": ">=5.3.2",
     "starlight-image-zoom": "^0.13.0"
   }
 }
